turns out that 5277de74aa2ea521748842317d0814214bfe7c49 actually added a vertical scrollbar to the splash screen on chrome. This is a hack to not set display: inline-block until we have hidden the splash screen. This really fixes #2.

--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ html {
 }
 
 #main #milli {
-  display: inline-block;
   font-size: 10em;
   font-size: 20vh;
   height: 25%;
@@ -69,4 +68,8 @@ html {
 /* Using the regular (non-monospace) font for everything doesn't work for 11. */
 #main::first-letter {
   font-family: digital-7;
+}
+
+img.splash {
+  height: 80%;
 }
